--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-quick-base64": "^2.0.5",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "use-between": "^1.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
