--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@playerdata/react-native-mcu-manager": "^2.3.2",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
@@ -19,6 +20,7 @@
     "react-native": "0.71.4",
     "react-native-ble-plx": "^2.0.3",
     "react-native-document-picker": "^8.2.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-paper": "^5.4.1",
     "react-native-quick-base64": "^2.0.5",
     "react-native-safe-area-context": "^4.5.0",
