--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-document-picker": "^8.2.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-paper": "^5.4.1",
+    "react-native-progress": "^5.0.0",
     "react-native-quick-base64": "^2.0.5",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
