✨Fixing minor issues

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@playerdata/react-native-mcu-manager": "^2.3.2",
+    "@react-native-async-storage/async-storage": "^1.18.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
@@ -21,6 +22,7 @@
     "react-native-ble-plx": "^2.0.3",
     "react-native-document-picker": "^8.2.0",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-navigation-bar-color": "^2.0.2",
     "react-native-paper": "^5.4.1",
     "react-native-progress": "^5.0.0",
     "react-native-quick-base64": "^2.0.5",
