--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -4,3 +4,5 @@ include ':app'
 includeBuild('../node_modules/react-native-gradle-plugin')
 include ':react-native-vector-icons'
 project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
+include ':react-native-haptic-feedback'
+project(':react-native-haptic-feedback').projectDir = new File(rootProject.projectDir, 	'../node_modules/react-native-haptic-feedback/android')
