--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.4",
+    "dayjs": "^1.11.7",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-ble-plx": "^2.0.3",
@@ -29,6 +30,7 @@
     "react-native-quick-base64": "^2.0.5",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0",
     "use-between": "^1.3.5"
   },
